experiments/convolution_mk4/tmp_files/16.log
/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/convolution_mk4/tmp_files/16.c: In function ‘kernel_conv2d’:
/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/convolution_mk4/tmp_files/16.c:69:26: error: expected ‘#pragma omp’ clause before ‘simd’
 #pragma omp parallel for simd  num_threads(28) private(j)
                          ^
/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/convolution_mk4/tmp_files/16.c:72:30: error: expected ‘#pragma omp’ clause before ‘simd’
     #pragma omp parallel for simd  num_threads(28)
                              ^
